@@ -53,7 +53,7 @@ Closes: #696256
  32 files changed, 116 insertions(+)
 
 diff --git a/src/applet-device-wifi.c b/src/applet-device-wifi.c
-index c67f8b6..7a69fc9 100644
+index 0ae44ad..dc7fbc8 100644
 --- a/src/applet-device-wifi.c
 +++ b/src/applet-device-wifi.c
 @@ -386,6 +386,7 @@ _do_new_auto_connection (NMApplet *applet,
@@ -64,7 +64,7 @@ index c67f8b6..7a69fc9 100644
  	NM80211ApSecurityFlags wpa_flags, rsn_flags;
  	GtkWidget *dialog;
  	MoreInfo *more_info;
-@@ -412,6 +413,7 @@ _do_new_auto_connection (NMApplet *applet,
+@@ -417,6 +418,7 @@ _do_new_auto_connection (NMApplet *applet,
  	/* If the AP is WPA[2]-Enterprise then we need to set up a minimal 802.1x
  	 * setting and ask the user for more information.
  	 */
@@ -72,7 +72,7 @@ index c67f8b6..7a69fc9 100644
  	rsn_flags = nm_access_point_get_rsn_flags (ap);
  	wpa_flags = nm_access_point_get_wpa_flags (ap);
  	if (   (rsn_flags & NM_802_11_AP_SEC_KEY_MGMT_802_1X)
-@@ -442,6 +444,29 @@ _do_new_auto_connection (NMApplet *applet,
+@@ -445,6 +447,29 @@ _do_new_auto_connection (NMApplet *applet,
  		nm_connection_add_setting (connection, NM_SETTING (s_8021x));
  	}
  
@@ -103,7 +103,7 @@ index c67f8b6..7a69fc9 100644
  	 * Dialog Of Doom.
  	 */
 diff --git a/src/connection-editor/ce-page.h b/src/connection-editor/ce-page.h
-index 639beb3..325c0fe 100644
+index 41711d9..521dbc6 100644
 --- a/src/connection-editor/ce-page.h
 +++ b/src/connection-editor/ce-page.h
 @@ -48,6 +48,7 @@ typedef void (*PageNewConnectionFunc) (GtkWindow *parent,
@@ -135,10 +135,10 @@ index 69da25c..b638530 100644
  }
  
 diff --git a/src/connection-editor/page-bond.c b/src/connection-editor/page-bond.c
-index d05b0b7..37fd32c 100644
+index 02a3aee..9ac5aa4 100644
 --- a/src/connection-editor/page-bond.c
 +++ b/src/connection-editor/page-bond.c
-@@ -577,6 +577,7 @@ bond_connection_new (GtkWindow *parent,
+@@ -611,6 +611,7 @@ bond_connection_new (GtkWindow *parent,
                       const char *detail,
                       NMRemoteSettings *settings,
                       PageNewConnectionResultFunc result_func,
@@ -207,10 +207,10 @@ index 514699a..656e3c6 100644
  
  #endif  /* __PAGE_DSL_H__ */
 diff --git a/src/connection-editor/page-ethernet.c b/src/connection-editor/page-ethernet.c
-index 16c8204..fde935f 100644
+index 451ee22..9372c1e 100644
 --- a/src/connection-editor/page-ethernet.c
 +++ b/src/connection-editor/page-ethernet.c
-@@ -378,6 +378,7 @@ ethernet_connection_new (GtkWindow *parent,
+@@ -377,6 +377,7 @@ ethernet_connection_new (GtkWindow *parent,
                           const char *detail,
                           NMRemoteSettings *settings,
                           PageNewConnectionResultFunc result_func,
@@ -231,10 +231,10 @@ index 4dd4a5c..55ade9b 100644
  
  #endif  /* __PAGE_ETHERNET_H__ */
 diff --git a/src/connection-editor/page-infiniband.c b/src/connection-editor/page-infiniband.c
-index f85e453..0026f46 100644
+index 19560a2..bb9335e 100644
 --- a/src/connection-editor/page-infiniband.c
 +++ b/src/connection-editor/page-infiniband.c
-@@ -251,6 +251,7 @@ infiniband_connection_new (GtkWindow *parent,
+@@ -253,6 +253,7 @@ infiniband_connection_new (GtkWindow *parent,
                             const char *detail,
                             NMRemoteSettings *settings,
                             PageNewConnectionResultFunc result_func,
@@ -255,10 +255,10 @@ index e895a98..97bff3b 100644
  
  #endif  /* __PAGE_INFINIBAND_H__ */
 diff --git a/src/connection-editor/page-mobile.c b/src/connection-editor/page-mobile.c
-index 7da1367..af0c7a2 100644
+index ef24184..df3d316 100644
 --- a/src/connection-editor/page-mobile.c
 +++ b/src/connection-editor/page-mobile.c
-@@ -468,6 +468,7 @@ new_connection_mobile_wizard_done (NMAMobileWizard *wizard,
+@@ -452,6 +452,7 @@ new_connection_mobile_wizard_done (NMAMobileWizard *wizard,
  	NMConnection *connection = NULL;
  
  	if (!canceled && method) {
@@ -266,7 +266,7 @@ index 7da1367..af0c7a2 100644
  		NMSetting *type_setting;
  		const char *ctype = NULL;
  		char *detail = NULL;
-@@ -481,6 +482,7 @@ new_connection_mobile_wizard_done (NMAMobileWizard *wizard,
+@@ -465,6 +466,7 @@ new_connection_mobile_wizard_done (NMAMobileWizard *wizard,
  			              NM_SETTING_GSM_NUMBER, "*99#",
  			              NM_SETTING_GSM_USERNAME, method->username,
  			              NM_SETTING_GSM_PASSWORD, method->password,
@@ -274,7 +274,7 @@ index 7da1367..af0c7a2 100644
  			              NM_SETTING_GSM_APN, method->gsm_apn,
  			              NULL);
  			break;
-@@ -492,6 +494,7 @@ new_connection_mobile_wizard_done (NMAMobileWizard *wizard,
+@@ -476,6 +478,7 @@ new_connection_mobile_wizard_done (NMAMobileWizard *wizard,
  			              NM_SETTING_CDMA_NUMBER, "#777",
  			              NM_SETTING_GSM_USERNAME, method->username,
  			              NM_SETTING_GSM_PASSWORD, method->password,
@@ -282,7 +282,7 @@ index 7da1367..af0c7a2 100644
  			              NULL);
  			break;
  		default:
-@@ -506,6 +509,13 @@ new_connection_mobile_wizard_done (NMAMobileWizard *wizard,
+@@ -490,6 +493,13 @@ new_connection_mobile_wizard_done (NMAMobileWizard *wizard,
  		connection = ce_page_new_connection (detail, ctype, FALSE, info->settings, info->user_data);
  		g_free (detail);
  
@@ -294,9 +294,9 @@ index 7da1367..af0c7a2 100644
 +		nm_setting_connection_add_permission (s_con, "user", g_get_user_name (), NULL);
 +
  		nm_connection_add_setting (connection, type_setting);
- 		add_default_serial_setting (connection);
  		nm_connection_add_setting (connection, nm_setting_ppp_new ());
-@@ -531,6 +541,7 @@ mobile_connection_new (GtkWindow *parent,
+ 	}
+@@ -514,6 +524,7 @@ mobile_connection_new (GtkWindow *parent,
                         const char *detail,
                         NMRemoteSettings *settings,
                         PageNewConnectionResultFunc result_func,
@@ -341,10 +341,10 @@ index d1936b3..91d9df3 100644
  
  #endif  /* __PAGE_TEAM_H__ */
 diff --git a/src/connection-editor/page-vlan.c b/src/connection-editor/page-vlan.c
-index 6fa6cc5..896bd09 100644
+index 1a8c6b6..d41e38a 100644
 --- a/src/connection-editor/page-vlan.c
 +++ b/src/connection-editor/page-vlan.c
-@@ -678,6 +678,7 @@ vlan_connection_new (GtkWindow *parent,
+@@ -673,6 +673,7 @@ vlan_connection_new (GtkWindow *parent,
                       const char *detail,
                       NMRemoteSettings *settings,
                       PageNewConnectionResultFunc result_func,
@@ -408,7 +408,7 @@ index 2339732..74ae225 100644
  
  void vpn_connection_import (GtkWindow *parent,
 diff --git a/src/connection-editor/page-wifi.c b/src/connection-editor/page-wifi.c
-index dbf4e20..a19e465 100644
+index 8a25c64..9c56e4b 100644
 --- a/src/connection-editor/page-wifi.c
 +++ b/src/connection-editor/page-wifi.c
 @@ -33,6 +33,8 @@
@@ -420,7 +420,7 @@ index dbf4e20..a19e465 100644
  #include "page-wifi.h"
  
  G_DEFINE_TYPE (CEPageWifi, ce_page_wifi, CE_TYPE_PAGE)
-@@ -629,6 +631,7 @@ wifi_connection_new (GtkWindow *parent,
+@@ -622,6 +624,7 @@ wifi_connection_new (GtkWindow *parent,
                       const char *detail,
                       NMRemoteSettings *settings,
                       PageNewConnectionResultFunc result_func,
@@ -428,7 +428,7 @@ index dbf4e20..a19e465 100644
                       gpointer user_data)
  {
  	NMConnection *connection;
-@@ -639,6 +642,17 @@ wifi_connection_new (GtkWindow *parent,
+@@ -632,6 +635,17 @@ wifi_connection_new (GtkWindow *parent,
  	                                     TRUE,
  	                                     settings,
  	                                     user_data);
@@ -459,10 +459,10 @@ index c039b00..b89e589 100644
  
  #endif  /* __PAGE_WIFI_H__ */
 diff --git a/src/connection-editor/page-wimax.c b/src/connection-editor/page-wimax.c
-index 3b786c2..dae8202 100644
+index 97c4d90..d8cf40c 100644
 --- a/src/connection-editor/page-wimax.c
 +++ b/src/connection-editor/page-wimax.c
-@@ -214,6 +214,7 @@ wimax_connection_new (GtkWindow *parent,
+@@ -216,6 +216,7 @@ wimax_connection_new (GtkWindow *parent,
                        const char *detail,
                        NMRemoteSettings *settings,
                        PageNewConnectionResultFunc result_func,
@@ -549,7 +549,7 @@ index ace323b..0916557 100644
  
  		s_wireless = (NMSettingWireless *) nm_setting_wireless_new ();
 diff --git a/src/mobile-helpers.c b/src/mobile-helpers.c
-index 4da1d97..d92956e 100644
+index daa422e..903537f 100644
 --- a/src/mobile-helpers.c
 +++ b/src/mobile-helpers.c
 @@ -179,6 +179,7 @@ mobile_wizard_done (NMAMobileWizard *wizard,
@@ -568,8 +568,8 @@ index 4da1d97..d92956e 100644
  			              NULL);
  			nm_connection_add_setting (connection, setting);
  		} else
-@@ -217,6 +219,7 @@ mobile_wizard_done (NMAMobileWizard *wizard,
- 		              NULL);
+@@ -219,6 +221,7 @@ mobile_wizard_done (NMAMobileWizard *wizard,
+ 		                                      "user", g_get_user_name (), NULL);
  		g_free (uuid);
  		g_free (id);
 +		nm_setting_connection_add_permission ((NMSettingConnection *) setting, "user", g_get_user_name (), NULL);
@@ -577,11 +577,11 @@ index 4da1d97..d92956e 100644
  	}
  
 diff --git a/src/utils/utils.c b/src/utils/utils.c
-index 269abe3..a9739da 100644
+index 61d6a9e..8d52ef1 100644
 --- a/src/utils/utils.c
 +++ b/src/utils/utils.c
-@@ -470,3 +470,10 @@ utils_update_password_storage (NMSetting *setting,
- 	}
+@@ -286,3 +286,10 @@ utils_filter_editable_on_insert_text (GtkEditable *editable,
+ 	return count > 0;
  }
  
 +gboolean
@@ -592,7 +592,7 @@ index 269abe3..a9739da 100644
 +	return (perms != NM_CLIENT_PERMISSION_RESULT_YES);
 +}
 diff --git a/src/utils/utils.h b/src/utils/utils.h
-index a4827de..142bcf2 100644
+index 1abff65..714fe3d 100644
 --- a/src/utils/utils.h
 +++ b/src/utils/utils.h
 @@ -27,6 +27,7 @@
@@ -603,7 +603,7 @@ index a4827de..142bcf2 100644
  #include <net/ethernet.h>
  #include <nm-access-point.h>
  
-@@ -89,6 +90,8 @@ void utils_show_error_dialog (const char *title,
+@@ -85,6 +86,8 @@ void utils_show_error_dialog (const char *title,
                                gboolean modal,
                                GtkWindow *parent);
  
@@ -613,10 +613,10 @@ index a4827de..142bcf2 100644
  
  typedef enum  {
 diff --git a/src/wireless-security/ws-wep-key.c b/src/wireless-security/ws-wep-key.c
-index f2ac042..904a283 100644
+index 2399ace..147f848 100644
 --- a/src/wireless-security/ws-wep-key.c
 +++ b/src/wireless-security/ws-wep-key.c
-@@ -146,6 +146,7 @@ static void
+@@ -147,6 +147,7 @@ static void
  fill_connection (WirelessSecurity *parent, NMConnection *connection)
  {
  	WirelessSecurityWEPKey *sec = (WirelessSecurityWEPKey *) parent;
@@ -624,7 +624,7 @@ index f2ac042..904a283 100644
  	NMSettingWirelessSecurity *s_wsec;
  	NMSettingSecretFlags secret_flags;
  	GtkWidget *widget, *passwd_entry;
-@@ -181,6 +182,12 @@ fill_connection (WirelessSecurity *parent, NMConnection *connection)
+@@ -173,6 +174,12 @@ fill_connection (WirelessSecurity *parent, NMConnection *connection)
  	              NM_SETTING_WIRELESS_SECURITY_WEP_KEY_TYPE, sec->type,
  	              NULL);
  
@@ -638,7 +638,7 @@ index f2ac042..904a283 100644
  		if (strlen (sec->keys[i]))
  			nm_setting_wireless_security_set_wep_key (s_wsec, i, sec->keys[i]);
 diff --git a/src/wireless-security/ws-wpa-psk.c b/src/wireless-security/ws-wpa-psk.c
-index aa50c9c..7fe4279 100644
+index 5cd658a..f6eaa27 100644
 --- a/src/wireless-security/ws-wpa-psk.c
 +++ b/src/wireless-security/ws-wpa-psk.c
 @@ -97,12 +97,14 @@ fill_connection (WirelessSecurity *parent, NMConnection *connection)
@@ -656,7 +656,7 @@ index aa50c9c..7fe4279 100644
  	s_wireless = nm_connection_get_setting_wireless (connection);
  	g_assert (s_wireless);
  
-@@ -127,6 +129,9 @@ fill_connection (WirelessSecurity *parent, NMConnection *connection)
+@@ -118,6 +120,9 @@ fill_connection (WirelessSecurity *parent, NMConnection *connection)
  	passwd_entry = widget;
  	key = gtk_entry_get_text (GTK_ENTRY (widget));
  	g_object_set (s_wireless_sec, NM_SETTING_WIRELESS_SECURITY_PSK, key, NULL);
@@ -664,5 +664,5 @@ index aa50c9c..7fe4279 100644
 +	if (s_con && nm_setting_connection_get_num_permissions (s_con))
 +		g_object_set (s_wireless_sec, NM_SETTING_WIRELESS_SECURITY_PSK_FLAGS, NM_SETTING_SECRET_FLAG_AGENT_OWNED, NULL);
  
- 	/* Update secret flags and popup when editing the connection */
- 	if (wpa_psk->editing_connection)
+ 	/* Save PSK_FLAGS to the connection */
+ 	secret_flags = nma_utils_menu_to_secret_flags (passwd_entry);
